--- a/.env.example
+++ b/.env.example
@@ -30,11 +30,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=https://phpstack-1427227-5328234.cloudwaysapps.com
 DB_PORT=3306
-DB_DATABASE=cryptitan
-DB_USERNAME=cryptitan_user
-DB_PASSWORD=secret
+DB_DATABASE=cdesxfgkwj
+DB_USERNAME=cdesxfgkwj
+DB_PASSWORD=F3k2K3PvfZ
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
